# glucoguard

./: .env  .gitignore  Cargo.toml  README.md  db.rs  gcm_reader.py  gcm_readings.csv  insulin_injections.csv  insulin_pump.py  session.rs  to-do.txt
data/: database.db
pump_simm/: gcm_reader.csv  gcm_reader.py  insulin_injections.csv  insulin_pump.py
src/: access_control.rs  alerts.rs  auth.rs  cgm.rs  db.rs  input_validation.rs  insulin.rs  main.rs  notneededdb.rs  security.rs  session.rs  user.rs  utils.rs
src/db/: db_utils.rs  initialize.rs  mod.rs  models.rs  queries.rs
src/insulinsystem/: cgm.rs  insulin.rs  logger.rs  mod.rs
src/menus/: admin_menu.rs  caretaker_menu.rs  clinician_menu.rs  home_menu.rs  login_menu.rs  menu_utils.rs  mod.rs  patient_menu copy.rs  patient_menu.rs  signup_menu.rs
