[package]
name = "glucoguard"
version = "0.1.0"
edition = "2024"
#we need to add authors

[dependencies]
# sqlx and tokio are for session.rs 
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
